# ya_gpt

./: README.md  pyproject.toml
app/: server.py
